--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,32 @@
 			/>
 		</a>
 
+		<main>
+			<div class="row">
+				<textarea id="input"></textarea>
+				<textarea id="output" disabled></textarea>
+			</div>
+
+			<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100">
+				<defs>
+					<marker id="arrow-head" markerWidth="10" markerHeight="10" 
+					refX="0.6" refY="3.5" orient="auto" viewBox="0 0 10 10">
+						<path
+							d="M 1,1
+							   Q 5,3.5 1,6"
+							class="arrow-head"
+						/>
+					</marker>
+				</defs>
+				<path
+					d="M 0,0
+					   A 100,100 1,0,0 200,0"
+					class="line"
+					marker-end="url(#arrow-head)"
+				/>
+			</svg>
+		</main>
+
 		<script type="module" src="index.js"></script>
 	</body>
 </html>
