--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<a class="github-link" href="https://github.com/thetarnav/bilang" target="_blank">
 			<img
-				src="https://img.shields.io/badge/GitHub-thetarnav%2Fbilang-blue?style=for-the-badge&logo=github"
+				src="https://img.shields.io/badge/GitHub-thetarnav%2Fbilang-orange?style=for-the-badge&logo=github"
 				alt="GitHub"
 			/>
 		</a>
